2025-03-05T00:41:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13665889276 # 584
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-05
* notice: last 14d: unq all: 5 1772
* notice: prev accum: outdated-unq outdated-all / unq all: 2447 245275 / 2478 247072
* notice: next accum: outdated-unq outdated-all / unq all: 2451 245406 / 2480 247198
* notice: prev exec diff / last date diff / accum: unq all: +2 +126 -0 -20 / +2 +126 -0 -0 / 2 126
* notice: removed / changed dates: [2025-02-18] / [2025-02-19 2025-03-04]

2025-03-04T00:42:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13643584844 # 583
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-04
* notice: last 14d: unq all: 7 1777
* notice: prev accum: outdated-unq outdated-all / unq all: 2446 245148 / 2476 246945
* notice: next accum: outdated-unq outdated-all / unq all: 2447 245275 / 2478 247072
* notice: prev exec diff / last date diff / accum: unq all: +2 +127 -0 -20 / +2 +127 -0 -0 / 2 127
* notice: removed / changed dates: [2025-02-17] / [2025-02-18 2025-03-03]

2025-03-03T00:43:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13621023669 # 582
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-03
* notice: last 14d: unq all: 7 1777
* notice: prev accum: outdated-unq outdated-all / unq all: 2444 245019 / 2474 246817
* notice: next accum: outdated-unq outdated-all / unq all: 2446 245148 / 2476 246945
* notice: prev exec diff / last date diff / accum: unq all: +2 +128 -0 -20 / +2 +128 -0 -0 / 2 128
* notice: removed / changed dates: [2025-02-16] / [2025-02-17 2025-03-02]

2025-03-02T00:44:29Z: