@@ -1,15 +1,10 @@
 {
-  "count": 1772,
-  "uniques": 5,
+  "count": 1766,
+  "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-02-19T00:00:00Z",
-      "count": 110,
-      "uniques": 3
-    },
-    {
       "timestamp": "2025-02-20T00:00:00Z",
-      "count": 129,
+      "count": 109,
       "uniques": 2
     },
     {
@@ -71,6 +66,11 @@
       "timestamp": "2025-03-04T00:00:00Z",
       "count": 126,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-03-05T00:00:00Z",
+      "count": 124,
+      "uniques": 1
     }
   ]
 }
